--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </nav>
 </div>
         <!--HERO-->
-        <section><!--NAVBAR E O HERO SECTION JUNTOS-->
+        <section><!--HERO SECTION--> 
             <div class="container flex flex-col justify-center p-6 mx-auto sm:py-12 lg:py-24 lg:flex-row lg:justify-between mt-12"> <!--container dos elementos textos e imagem-->
 
                 <div class="flex flex-col justify-center p-6 text-center rounded-sm lg:max-w-md xl:max-w-lg lg:text-left">
