--- a/basico.html
+++ b/basico.html
@@ -33,17 +33,17 @@
     </div>
 
     <ul class="hidden absolute top-1/2 right-0 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
-        <li><a class="text-12 text-indigo-700 font-bold" href="#">Home</a></li>
+      <li><a class="text-12 text-indigo-700 font-bold" href="index.html">Home</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">About Us</a></li>
+      <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Alfabeto</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Services</a></li>
+      <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Niveis</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Pricing</a></li>
+      <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Contato</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="login.html">Contact</a></li>
-    </ul>
-    <a class=" lg:inline-block py-2 px-6 bg-indigo-700 hover:bg-indigo-900 text-sm text-white font-bold rounded-xl transition duration-200" href="#">Faça o teste</a>
+      <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="login.html">Login</a></li>
+  </ul>
+  <a class=" lg:inline-block py-2 px-6 bg-indigo-700 hover:bg-indigo-900 text-sm text-white font-bold rounded-xl transition duration-200" href="#">Faça o teste</a>
 </nav>
 
 <!--PARTE PROS CELULARES-->
@@ -65,34 +65,31 @@
         </div>
 
         <div> <!--parte das opcoes-->
-            <ul>
-                <li class="mb-1">
-                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Home</a>
-                </li>
-                <li class="mb-1">
-                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">About Us</a>
-                </li>
-                <li class="mb-1">
-                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Services</a>
-                </li>
-                <li class="mb-1">
-                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Pricing</a>
-                </li>
-                <li class="mb-1">
-                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Contact</a>
-                </li>
-            </ul>
-        </div>
+          <ul>
+              <li class="mb-1">
+                  <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="index.html">Home</a>
+              </li>
+              <li class="mb-1">
+                  <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Alfabeto</a>
+              </li>
+              <li class="mb-1">
+                  <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Niveis</a>
+              </li>
+              <li class="mb-1">
+                  <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Contato</a>
+              </li>
+          </ul>
+      </div>
 
-        <div class="mt-auto"> <!--Parte do signup e copyright-->
-            <div class="pt-6">
-                <a class="block px-4 py-3 mb-3 leading-loose text-xs text-center font-semibold leading-none bg-gray-50 hover:bg-gray-100 rounded-xl" href="#">Sign in</a>
-                <a class="block px-4 py-3 mb-2 leading-loose text-xs text-center text-white font-semibold bg-blue-600 hover:bg-blue-700  rounded-xl" href="#">Sign Up</a>
-            </div>
-            <p class="my-4 text-xs text-center text-gray-400">
-                <span>Copyright © 2021</span>
-            </p>
-        </div>
+      <div class="mt-auto"> <!--Parte do signup e copyright-->
+          <div class="pt-6">
+              <a class="block px-4 py-3 mb-3 leading-loose text-xs text-center font-semibold leading-none bg-gray-50 hover:bg-gray-100 rounded-xl" href="login.html">Login</a>
+              <a class="block px-4 py-3 mb-2 leading-loose text-xs text-center text-white font-semibold bg-indigo-700 hover:bg-indigo-900  rounded-xl" href="#">Cadastre-se</a>
+          </div>
+          <p class="my-4 text-xs text-center text-gray-400">
+              <span>Copyright © 2023</span>
+          </p>
+      </div>
 
     </nav>
 </div>
@@ -100,7 +97,7 @@
 
 <!-- TIMELINE -->
 <section>
-    <div class="bg-black text-white py-8">
+    <div class="text-black py-8">
       <div class="flex justify-center">
         <div class="ml-0 md:ml-12 lg:w-2/3">
           <div class="container mx-auto w-full h-full">
@@ -112,7 +109,7 @@
                 <div class="order-1 w-5/12 px-1 py-4 text-right">
                   <p class="mb-3 text-base text-yellow-300">1-6 May, 2021</p>
                   <h4 class="mb-3 font-bold text-lg md:text-2xl">Registration</h4>
-                  <p class="text-sm md:text-base leading-snug text-gray-50 text-opacity-100">
+                  <p class="text-sm md:text-base leading-snug text-black text-opacity-100">
                     Pick your favourite event(s) and register in that event by filling the form corresponding to that
                     event. Its that easy :
                   </p>
@@ -123,7 +120,7 @@
                 <div class="order-1 w-5/12 px-1 py-4 text-left">
                   <p class="mb-3 text-base text-yellow-300">6-9 May, 2021</p>
                   <h4 class="mb-3 font-bold text-lg md:text-2xl">Participation</h4>
-                  <p class="text-sm md:text-base leading-snug text-gray-50 text-opacity-100">
+                  <p class="text-sm md:text-base leading-snug text-black text-opacity-100">
                     Participate online. The links for your registered events will be sent to you via email and whatsapp
                     groups. Use those links and show your talent.
                   </p>
@@ -134,7 +131,7 @@
                 <div class="order-1 w-5/12 px-1 py-4 text-right">
                   <p class="mb-3 text-base text-yellow-300">10 May, 2021</p>
                   <h4 class="mb-3 font-bold text-lg md:text-2xl">Result Declaration</h4>
-                  <p class="text-sm md:text-base leading-snug text-gray-50 text-opacity-100">
+                  <p class="text-sm md:text-base leading-snug text-black text-opacity-100">
                     The ultimate genius will be revealed by our judging panel on 10th May, 2021 and the results will be
                     announced on the whatsapp groups and will be mailed to you.
                   </p>
@@ -145,7 +142,7 @@
                 <div class="order-1 w-5/12 px-1 py-4 text-left">
                   <p class="mb-3 text-base text-yellow-300">10 May, 2021</p>
                   <h4 class="mb-3 font-bold text-lg md:text-2xl">Winners Announcement</h4>
-                  <p class="text-sm md:text-base leading-snug text-gray-50 text-opacity-100">
+                  <p class="text-sm md:text-base leading-snug text-black text-opacity-100">
                     The winners will be announced on our social media handles on 10th May, 2021. Stay tuned and see if
                     your name pops up there.
                   </p>
