--- a/basico.html
+++ b/basico.html
@@ -36,7 +36,7 @@
     <ul class="hidden absolute top-1/2 right-0 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
       <li><a class="text-12 text-indigo-700 font-bold" href="index.html">Home</a></li>
 
-      <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Alfabeto</a></li>
+      <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="alfabeto.html">Alfabeto</a></li>
 
       <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Niveis</a></li>
 
@@ -71,7 +71,7 @@
                   <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="index.html">Home</a>
               </li>
               <li class="mb-1">
-                  <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Alfabeto</a>
+                  <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="alfabeto.html">Alfabeto</a>
               </li>
               <li class="mb-1">
                   <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Niveis</a>
@@ -95,24 +95,23 @@
     </nav>
 </div>
 
-
 <!-- TIMELINE -->
-<section class="flex flex-col items-center justify-center">
+<section class="p-12 flex flex-col items-center justify-center">
   <h1 class="mx-auto mb-6 text-2xl font-bold text-indigo-700 lg:text-3xl text-center">BASICO</h1>
+  <div class="flex flex-col items-center">
+    <div class="timeline">
+      <div class="line"></div>
       <div class="flex flex-col items-center">
-        <div class="timeline">
-          <div class="line"></div>
-            <div class="flex flex-col items-center">
-              <a href="#" class="flex items-center justify-center w-20 h-20 rounded-full ml-20 text-xl bg-blue-500 text-white">1</a>
-              <a href="#" class="flex items-center justify-center w-20 h-20 rounded-full mr-20 text-xl bg-blue-500 text-white">2</a>
-              <a href="#" class="flex items-center justify-center w-20 h-20 rounded-full ml-20 text-xl bg-blue-500 text-white">3</a>
-              <a href="#" class="flex items-center justify-center w-20 h-20 rounded-full mr-20 text-xl bg-blue-500 text-white">4</a>
-              <a href="#" class="flex items-center justify-center w-20 h-20 rounded-full ml-20 text-xl bg-blue-500 text-white">5</a>
-              <a href="#" class="flex items-center justify-center w-20 h-20 rounded-full mr-20 text-xl bg-blue-500 text-white">6</a>
-            </div>
-          </div>
-        </div>
-
+        <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">1</a>
+        <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">2</a>
+        <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">3</a>
+        <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">4</a>
+        <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">5</a>
+        <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">6</a>
+      </div>
+    </div>
+  </div>
+  <svg id="visual" viewBox="0 0 3000 1400" class="absolute bottom-0 left-0 w-full" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"><path d="M0 942L50 954.5C100 967 200 992 300 989.5C400 987 500 957 600 933.5C700 910 800 893 900 883C1000 873 1100 870 1200 900.3C1300 930.7 1400 994.3 1500 995.8C1600 997.3 1700 936.7 1800 909.7C1900 882.7 2000 889.3 2100 898.2C2200 907 2300 918 2400 932.3C2500 946.7 2600 964.3 2700 970C2800 975.7 2900 969.3 2950 966.2L3000 963L3000 1401L2950 1401C2900 1401 2800 1401 2700 1401C2600 1401 2500 1401 2400 1401C2300 1401 2200 1401 2100 1401C2000 1401 1900 1401 1800 1401C1700 1401 1600 1401 1500 1401C1400 1401 1300 1401 1200 1401C1100 1401 1000 1401 900 1401C800 1401 700 1401 600 1401C500 1401 400 1401 300 1401C200 1401 100 1401 50 1401L0 1401Z" fill="#706ccc"></path><path d="M0 1164L50 1147.8C100 1131.7 200 1099.3 300 1101.8C400 1104.3 500 1141.7 600 1134C700 1126.3 800 1073.7 900 1070C1000 1066.3 1100 1111.7 1200 1124.5C1300 1137.3 1400 1117.7 1500 1093.3C1600 1069 1700 1040 1800 1030.7C1900 1021.3 2000 1031.7 2100 1056.5C2200 1081.3 2300 1120.7 2400 1113.3C2500 1106 2600 1052 2700 1056C2800 1060 2900 1122 2950 1153L3000 1184L3000 1401L2950 1401C2900 1401 2800 1401 2700 1401C2600 1401 2500 1401 2400 1401C2300 1401 2200 1401 2100 1401C2000 1401 1900 1401 1800 1401C1700 1401 1600 1401 1500 1401C1400 1401 1300 1401 1200 1401C1100 1401 1000 1401 900 1401C800 1401 700 1401 600 1401C500 1401 400 1401 300 1401C200 1401 100 1401 50 1401L0 1401Z" fill="#3636b3"></path><path d="M0 1244L50 1240C100 1236 200 1228 300 1215.5C400 1203 500 1186 600 1194C700 1202 800 1235 900 1243.3C1000 1251.7 1100 1235.3 1200 1228.7C1300 1222 1400 1225 1500 1230.7C1600 1236.3 1700 1244.7 1800 1234C1900 1223.3 2000 1193.7 2100 1176.7C2200 1159.7 2300 1155.3 2400 1156.2C2500 1157 2600 1163 2700 1169C2800 1175 2900 1181 2950 1184L3000 1187L3000 1401L2950 1401C2900 1401 2800 1401 2700 1401C2600 1401 2500 1401 2400 1401C2300 1401 2200 1401 2100 1401C2000 1401 1900 1401 1800 1401C1700 1401 1600 1401 1500 1401C1400 1401 1300 1401 1200 1401C1100 1401 1000 1401 900 1401C800 1401 700 1401 600 1401C500 1401 400 1401 300 1401C200 1401 100 1401 50 1401L0 1401Z" fill="#232a84"></path></svg>
 </section>
 
     </body>           
