--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <ul class="hidden absolute top-1/2 right-0 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
         <li><a class="text-12 text-indigo-700 font-bold" href="#">Home</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Alfabeto</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="alfabeto.html">Alfabeto</a></li>
 
         <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="basico.html">Niveis</a></li>
 
@@ -70,7 +70,7 @@
                     <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Home</a>
                 </li>
                 <li class="mb-1">
-                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Alfabeto</a>
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="alfabeto.html">Alfabeto</a>
                 </li>
                 <li class="mb-1">
                     <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="basico.html">Niveis</a>
@@ -93,6 +93,8 @@
 
     </nav>
 </div>
+
+<!--HERO-->
 <section class="bg-[url] bg-center bg-no-repeat bg-cover relative flex-shrink-0">
 
     <div class="container flex flex-col justify-center p-6 mx-auto sm:py-12 lg:py-24 lg:flex-row lg:justify-between mt-12">
@@ -121,6 +123,7 @@
     </div>
 
   </section> <!-- Fecha a secao do hero -->
+
   <section class="mt-0">
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320" class="mb-0 mt-[-1px]">
     <path fill="#3636b3" fill-opacity="1" d="M0,32L24,48C48,64,96,96,144,128C192,160,240,192,288,170.7C336,
@@ -138,7 +141,7 @@
               <h1 class="mx-auto mb-6 text-2xl font-bold text-indigo-700 lg:text-3xl text-center">A formula ideal para voce aprender uma nova lingua!</h1>
               <p class="mx-auto lg:text-xl leading-relaxed text-gray-800 text-center mb-8">Desenvolvemos o melhor caminho para construir seu conhecimento. Lorem ipsum dolor sit amet consectetur adipisicing elit. 
                 Provident explicabo rerum rem.</p>
-              <img class="mx-auto rounded-lg" src="https://images.unsplash.com/photo-1515955656352-a1fa3ffcd111?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=750&q=80" />
+              <img class="mx-auto rounded-lg rounded-2xl shadow-xl" src="imagens/caminho.png" />
             </div>
           </div>
         </div>
