--- a/login.html
+++ b/login.html
@@ -3,11 +3,11 @@
 <head>   
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="logo.png" type="image/x-icon">
+        <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css">       
-        <script defer src="main.js"></script>
-        <link rel="stylesheet" href="style.css">
+        <script defer src="js/main.js"></script>
+        <link rel="stylesheet" href="css/style.css">
         <title>Buni</title>
 </head>
       <body >
@@ -17,7 +17,7 @@
 <nav class="relative px-4 py-4 flex justify-between items-center">
 
     <a class="text-3xl font-bold leading-none" href="#"> <!--PARTE DO LOGO-->
-        <img src="logo.png" alt="" class="h-12">
+        <img src="imagens/logo.png" alt="" class="h-12">
     </a>
   
     <!--DARK LIGHT TOGGLE-->
@@ -35,7 +35,7 @@
     <ul class="hidden absolute top-1/2 right-0 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
         <li><a class="text-12 text-indigo-700 font-bold" href="index.html">Home</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">About Us</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="alfabeto.html">About Us</a></li>
 
         <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Services</a></li>
 
@@ -55,7 +55,7 @@
 
         <div class="flex items-center mb-8">
             <a class="mr-auto text-3xl font-bold leading-none" href="#">
-                <img src="logo.png" alt="" class="h-12">
+                <img src="imagens/logo.png" alt="" class="h-12">
             </a>
             <button class="navbar-close">
                 <svg class="h-6 w-6 text-gray-400 cursor-pointer hover:text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -70,7 +70,7 @@
                     <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="index.html">Home</a>
                 </li>
                 <li class="mb-1">
-                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Alfabeto</a>
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="alfabeto.html">Alfabeto</a>
                 </li>
                 <li class="mb-1">
                     <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Niveis</a>
@@ -99,7 +99,7 @@
 <section class="bg-gray-50 dark:bg-gray-900">
     <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
         <a href="#" class="flex items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
-            <img class="w-8 h-8 mr-2" src="https://flowbite.s3.amazonaws.com/blocks/marketing-ui/logo.svg" alt="logo">
+            <img class="w-8 h-8 mr-2" src="imagens/logo.png" alt="logo">
             TokiLingo    
         </a>
         <div class="w-full bg-white rounded-lg shadow dark:border lg:mt-0 sm:max-w-md xl:p-0 dark:bg-gray-800 dark:border-gray-700">
