--- a/alfabeto.html
+++ b/alfabeto.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css">       
         <script defer src="js/main.js"></script>
         <link rel="stylesheet" href="css/style.css">
-        <title>Buni</title>
+        <title>Tokilingo</title>
 </head>
       <body>
  
