--- a/basico.html
+++ b/basico.html
@@ -9,7 +9,7 @@
         <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">     
         <script defer src="js/main.js"></script>
         <link rel="stylesheet" href="css/style.css">
-        <title>Buni</title>
+        <title>Tokilingo</title>
 </head>
 <body>
         
@@ -17,9 +17,7 @@
 
 <nav class="relative px-4 py-4 flex justify-between items-center">
 
-    <a class="text-3xl font-bold leading-none" href="#"> <!--PARTE DO LOGO-->
-        <img src="imagens/logo.png" alt="" class="h-12">
-    </a>
+ 
   
     <!--DARK LIGHT TOGGLE-->
 
@@ -32,6 +30,10 @@
             </svg>
         </button>
     </div>
+
+    <a class="text-3xl font-bold leading-none" href="#"> <!--PARTE DO LOGO-->
+        <img src="imagens/logo.png" alt="" class="h-12">
+    </a>
 
     <ul class="hidden absolute top-1/2 right-0 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
       <li><a class="text-12 text-indigo-700 font-bold" href="index.html">Home</a></li>
@@ -96,23 +98,48 @@
 </div>
 
 <!-- TIMELINE -->
-<section class="p-12 flex flex-col items-center justify-center">
-  <h1 class="mx-auto mb-6 text-2xl font-bold text-indigo-700 lg:text-3xl text-center">BASICO</h1>
-  <div class="flex flex-col items-center">
-    <div class="timeline">
-      <div class="line"></div>
-      <div class="flex flex-col items-center">
-        <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">1</a>
-        <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">2</a>
-        <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">3</a>
-        <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">4</a>
-        <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">5</a>
-        <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">6</a>
-      </div>
+<section class="flex flex-col items-center justify-center">
+    <h1 class="mx-auto mb-6 text-2xl font-bold text-indigo-700 lg:text-3xl text-center">BASICO</h1>   
+    <div class="flex-col items-center">
+      <div class="timeline">
+        <div class="line"></div>
+        <div class="flex flex-col items-center">
+          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">1</a>
+          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">2</a>
+          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">3</a>
+          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">4</a>
+          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">5</a>
+          <a href="#" class="flex w-24 h-24 sm:w-24 sm:h-24 md:w-28 md:h-28 lg:w-42 lg:h-42 rounded-full text-xl bg-indigo-700 hover:bg-indigo-600 text-white text-center shadow-custom">6</a>          
+        </div>    
+      </div>  
     </div>
-  </div>
-  <svg id="visual" viewBox="0 0 3000 1400" class="absolute bottom-0 left-0 w-full" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1"><path d="M0 942L50 954.5C100 967 200 992 300 989.5C400 987 500 957 600 933.5C700 910 800 893 900 883C1000 873 1100 870 1200 900.3C1300 930.7 1400 994.3 1500 995.8C1600 997.3 1700 936.7 1800 909.7C1900 882.7 2000 889.3 2100 898.2C2200 907 2300 918 2400 932.3C2500 946.7 2600 964.3 2700 970C2800 975.7 2900 969.3 2950 966.2L3000 963L3000 1401L2950 1401C2900 1401 2800 1401 2700 1401C2600 1401 2500 1401 2400 1401C2300 1401 2200 1401 2100 1401C2000 1401 1900 1401 1800 1401C1700 1401 1600 1401 1500 1401C1400 1401 1300 1401 1200 1401C1100 1401 1000 1401 900 1401C800 1401 700 1401 600 1401C500 1401 400 1401 300 1401C200 1401 100 1401 50 1401L0 1401Z" fill="#706ccc"></path><path d="M0 1164L50 1147.8C100 1131.7 200 1099.3 300 1101.8C400 1104.3 500 1141.7 600 1134C700 1126.3 800 1073.7 900 1070C1000 1066.3 1100 1111.7 1200 1124.5C1300 1137.3 1400 1117.7 1500 1093.3C1600 1069 1700 1040 1800 1030.7C1900 1021.3 2000 1031.7 2100 1056.5C2200 1081.3 2300 1120.7 2400 1113.3C2500 1106 2600 1052 2700 1056C2800 1060 2900 1122 2950 1153L3000 1184L3000 1401L2950 1401C2900 1401 2800 1401 2700 1401C2600 1401 2500 1401 2400 1401C2300 1401 2200 1401 2100 1401C2000 1401 1900 1401 1800 1401C1700 1401 1600 1401 1500 1401C1400 1401 1300 1401 1200 1401C1100 1401 1000 1401 900 1401C800 1401 700 1401 600 1401C500 1401 400 1401 300 1401C200 1401 100 1401 50 1401L0 1401Z" fill="#3636b3"></path><path d="M0 1244L50 1240C100 1236 200 1228 300 1215.5C400 1203 500 1186 600 1194C700 1202 800 1235 900 1243.3C1000 1251.7 1100 1235.3 1200 1228.7C1300 1222 1400 1225 1500 1230.7C1600 1236.3 1700 1244.7 1800 1234C1900 1223.3 2000 1193.7 2100 1176.7C2200 1159.7 2300 1155.3 2400 1156.2C2500 1157 2600 1163 2700 1169C2800 1175 2900 1181 2950 1184L3000 1187L3000 1401L2950 1401C2900 1401 2800 1401 2700 1401C2600 1401 2500 1401 2400 1401C2300 1401 2200 1401 2100 1401C2000 1401 1900 1401 1800 1401C1700 1401 1600 1401 1500 1401C1400 1401 1300 1401 1200 1401C1100 1401 1000 1401 900 1401C800 1401 700 1401 600 1401C500 1401 400 1401 300 1401C200 1401 100 1401 50 1401L0 1401Z" fill="#232a84"></path></svg>
-</section>
+    <svg id="visual" viewBox="0 0 3000 200" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" class="left-0" style="margin-bottom: -3px;">
+        <path d="M0 76L31.3 71.2C62.7 66.3 125.3 56.7 187.8 51.5C250.3 
+        46.3 312.7 45.7 375.2 52C437.7 58.3 500.3 71.7 562.8 79.5C625.3 87.3 687.7 89.7 750.2 89.3C812.7 89 875.3 86 937.8 81C1000.3 76 1062.7 69 1125.2 59.7C1187.7 50.3 1250.3 38.7 1312.8 35C1375.3 31.3 
+        1437.7 35.7 1500.2 35.5C1562.7 35.3 1625.3 30.7 1687.8 39.7C1750.3 48.7 1812.7 71.3 1875.2 80C1937.7 88.7 2000.3 83.3 2062.8 76.2C2125.3 69 2187.7 60 2250.2 53.7C2312.7 47.3 2375.3 43.7 2437.8 50.2C2500.3 
+        56.7 2562.7 73.3 2625.2 79.3C2687.7 85.3 2750.3 80.7 2812.8 72.5C2875.3 64.3 2937.7 52.7 2968.8 46.8L3000 41L3000 201L2968.8 201C2937.7 201 2875.3 201 2812.8 201C2750.3 201 2687.7 201 2625.2 
+        201C2562.7 201 2500.3 201 2437.8 201C2375.3 201 2312.7 201 2250.2 201C2187.7 201 2125.3 201 2062.8 201C2000.3 201 1937.7 201 1875.2 201C1812.7 201 1750.3 201 1687.8 201C1625.3 201 1562.7 201 1500.2 201C1437.7 
+        201 1375.3 201 1312.8 201C1250.3 201 1187.7 201 1125.2 201C1062.7 201 1000.3 201 937.8 201C875.3 201 812.7 201 750.2 201C687.7 201 625.3 201 562.8 201C500.3 201 437.7 201 375.2 201C312.7 201 250.3 201 
+        187.8 201C125.3 201 62.7 201 31.3 201L0 201Z" fill="#706ccc"></path><path d="M0 127L31.3 127.8C62.7 128.7 125.3 130.3 187.8 122.2C250.3 114 312.7 96 375.2 86.2C437.7 76.3 500.3 74.7 562.8 84C625.3 93.3 687.7 
+        113.7 750.2 115.8C812.7 118 875.3 102 937.8 97.8C1000.3 93.7 1062.7 101.3 1125.2 107.7C1187.7 114 1250.3 119 1312.8 117.2C1375.3 115.3 1437.7 106.7 1500.2 97.8C1562.7 89 1625.3 80 1687.8 79.8C1750.3 79.7 1812.7 
+        88.3 1875.2 94.8C1937.7 101.3 2000.3 105.7 2062.8 111.5C2125.3 117.3 2187.7 124.7 2250.2 119.8C2312.7 115 2375.3 98 2437.8 91.5C2500.3 85 2562.7 89 2625.2 87.7C2687.7 86.3 2750.3 79.7 2812.8 77.7C2875.3 75.7 2937.7 78.3 
+        2968.8 79.7L3000 81L3000 201L2968.8 201C2937.7 201 2875.3 201 2812.8 201C2750.3 201 2687.7 201 2625.2 201C2562.7 201 2500.3 201 2437.8 201C2375.3 201 2312.7 201 2250.2 201C2187.7 201 2125.3 201 2062.8 201C2000.3 201 1937.7 201
+        1875.2 201C1812.7 201 1750.3 201 1687.8 201C1625.3 201 1562.7 201 1500.2 201C1437.7 201 1375.3 201 1312.8 201C1250.3 201 1187.7 201 1125.2 201C1062.7 201 1000.3 201 937.8 201C875.3 201 812.7 201 750.2 201C687.7 
+        201 625.3 201 562.8 201C500.3 201 437.7 201 375.2 201C312.7 201 250.3 201 187.8 201C125.3 201 62.7 201 31.3 201L0 201Z" fill="#3636b3"></path><path d="M0 136L31.3 142.5C62.7 149 125.3 162 187.8 169C250.3 176 312.7 
+        177 375.2 168C437.7 159 500.3 140 562.8 131.5C625.3 123 687.7 125 750.2 134.3C812.7 143.7 875.3 160.3 937.8 159C1000.3 157.7 1062.7 138.3 1125.2 136.2C1187.7 134 1250.3 149 1312.8 156.7C1375.3 164.3 1437.7 164.7 
+        1500.2 161.5C1562.7 158.3 1625.3 151.7 1687.8 153.7C1750.3 155.7 1812.7 166.3 1875.2 162.7C1937.7 159 2000.3 141 2062.8 131.3C2125.3 121.7 2187.7 120.3 2250.2 128.2C2312.7 136 2375.3 153 2437.8 156.7C2500.3 160.3 2562.7 
+        150.7 2625.2 146.2C2687.7 141.7 2750.3 142.3 2812.8 140.3C2875.3 138.3 2937.7 133.7 2968.8 131.3L3000 129L3000 201L2968.8 201C2937.7 201 2875.3 201 2812.8 201C2750.3 201 2687.7 201 2625.2 201C2562.7 201 2500.3 201 2437.8 201C2375.3 
+        201 2312.7 201 2250.2 201C2187.7 201 2125.3 201 2062.8 201C2000.3 201 1937.7 201 1875.2 201C1812.7 201 1750.3 201 1687.8 201C1625.3 201 1562.7 201 1500.2 201C1437.7 201 1375.3 201 1312.8 201C1250.3 201 1187.7 201 1125.2 201C1062.7 
+        201 1000.3 201 937.8 201C875.3 201 812.7 201 750.2 201C687.7 201 625.3 201 562.8 201C500.3 201 437.7 201 375.2 201C312.7 201 250.3 201 187.8 201C125.3 201 62.7 201 31.3 201L0 201Z" fill="#232a84"></path></svg>
+  </section>
+  
+
+
+    <section class="bg-232a84 mt-0">
+        <div class="mx-auto mb-0 mt-[-1px]">
+            <h1 class="text-gray-400">OLA Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, fuga?</h1>
+        </div>
+    </section>
 
     </body>           
 </html>
