--- a/basico.html
+++ b/basico.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
         <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
+        <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css">  
         <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">     
         <script defer src="js/main.js"></script>
@@ -17,7 +19,7 @@
 
 <nav class="relative px-4 py-4 flex justify-between items-center">
 
- 
+
   
     <!--DARK LIGHT TOGGLE-->
 
@@ -46,7 +48,7 @@
 
       <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="login.html">Login</a></li>
   </ul>
-  <a class=" lg:inline-block py-2 px-6 bg-indigo-700 hover:bg-indigo-900 text-sm text-white font-bold rounded-xl transition duration-200" href="#">Faça o teste</a>
+  <a class=" lg:inline-block py-2 px-6 bg-indigo-700 hover:bg-indigo-900 text-sm text-white font-bold rounded-xl transition duration-200" href="teste.html">Faça o teste</a>
 </nav>
 
 <!--PARTE PROS CELULARES-->
@@ -113,7 +115,7 @@
         </div>    
       </div>  
     </div>
-    <svg id="visual" viewBox="0 0 3000 200" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" class="left-0" style="margin-bottom: -3px;">
+    <svg id="visual" viewBox="0 0 3000 200" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" class="left-0" style="margin-bottom: -3px;" >
         <path d="M0 76L31.3 71.2C62.7 66.3 125.3 56.7 187.8 51.5C250.3 
         46.3 312.7 45.7 375.2 52C437.7 58.3 500.3 71.7 562.8 79.5C625.3 87.3 687.7 89.7 750.2 89.3C812.7 89 875.3 86 937.8 81C1000.3 76 1062.7 69 1125.2 59.7C1187.7 50.3 1250.3 38.7 1312.8 35C1375.3 31.3 
         1437.7 35.7 1500.2 35.5C1562.7 35.3 1625.3 30.7 1687.8 39.7C1750.3 48.7 1812.7 71.3 1875.2 80C1937.7 88.7 2000.3 83.3 2062.8 76.2C2125.3 69 2187.7 60 2250.2 53.7C2312.7 47.3 2375.3 43.7 2437.8 50.2C2500.3 
@@ -135,9 +137,80 @@
   
 
 
-    <section class="bg-232a84 mt-0">
-        <div class="mx-auto mb-0 mt-[-1px]">
-            <h1 class="text-gray-400">OLA Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti, fuga?</h1>
+
+        <footer class="relative bg-232a84 pt-14 pb-20">
+            <div class="container mx-auto px-4">
+                <div class="flex flex-wrap text-left lg:text-left">
+                <div class="w-full lg:w-6/12 px-4">
+
+                    <h4 class="text-3xl fonat-semibold text-white">Let's keep in touch!</h4>
+                    <h5 class="text-lg mt-0 mb-2 text-white">
+                    Find us on any of these platforms, we respond 1-2 business days.
+                    </h5>
+
+                    <div class="mt-6 lg:mb-0 mb-6">
+                    <button class="bg-white hover:bg-gray-200 text-lightBlue-400 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2" type="button">
+                        <i class="fab fa-twitter"></i></button>
+                    <button class="bg-white hover:bg-gray-200 text-lightBlue-600 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2" type="button">
+                        <i class="fab fa-facebook-square"></i></button>
+                    <button class="bg-white hover:bg-gray-200 text-pink-400 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2" type="button">
+                        <i class="fab fa-dribbble"></i></button>
+                    <button class="bg-white hover:bg-gray-200 text-blueGray-800 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2" type="button">
+                        <i class="fab fa-github"></i>
+                    </button>
+                    </div>
+
+                </div>
+                <div class="w-full lg:w-6/12 px-4">
+                    <div class="flex flex-wrap items-top mb-6">
+                    <div class="w-full lg:w-4/12 px-4 ml-auto">
+                        <span class="block uppercase text-white text-sm font-semibold mb-2">Useful Links</span>
+                        <ul class="list-unstyled">
+                        <li>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://www.creative-tim.com/presentation?ref=njs-profile">About Us</a>
+                        </li>
+                        <li>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://blog.creative-tim.com?ref=njs-profile">Blog</a>
+                        </li>
+                        <li>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://www.github.com/creativetimofficial?ref=njs-profile">Github</a>
+                        </li>
+                        <li>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://www.creative-tim.com/bootstrap-themes/free?ref=njs-profile">Free Products</a>
+                        </li>
+                        </ul>
+                    </div>
+                    <div class="w-full lg:w-4/12 px-4">
+                        <span class="block uppercase text-white text-sm font-semibold mb-2">Other Resources</span>
+                        <ul class="list-unstyled">
+                        <li>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://github.com/creativetimofficial/notus-js/blob/main/LICENSE.md?ref=njs-profile">MIT License</a>
+                        </li>
+                        <li>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://creative-tim.com/terms?ref=njs-profile">Terms &amp; Conditions</a>
+                        </li>
+                        <li>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://creative-tim.com/privacy?ref=njs-profile">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://creative-tim.com/contact-us?ref=njs-profile">Contact Us</a>
+                        </li>
+                        </ul>
+                    </div>
+                    </div>
+                </div>
+                </div>
+                <hr class="my-6 border-blueGray-300">
+                <div class="flex flex-wrap items-center md:justify-between justify-center">
+                <div class="w-full md:w-4/12 px-4 mx-auto text-center">
+                    <div class="text-sm text-blueGray-500 font-semibold py-1">
+                    Copyright © <span id="get-current-year">2023</span><a href="https://www.creative-tim.com/product/notus-js" class="text-blueGray-500 hover:text-gray-800" target="_blank"> 
+                    <a href="https://www.creative-tim.com?ref=njs-profile" class="text-blueGray-500 hover:text-blueGray-800"></a>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </footer>
         </div>
     </section>
 
