--- a/alfabeto.html
+++ b/alfabeto.html
@@ -19,7 +19,7 @@
 <nav class="relative px-4 py-4 flex justify-between items-center">
 
     <a class="text-3xl font-bold leading-none" href="#"> <!--PARTE DO LOGO-->
-        <img src="imagens/logo.png" alt="" class="h-14">
+        <img src="imagens/logotokiazul.png" alt="" class="h-14">
     </a>
   
     <!--DARK LIGHT TOGGLE-->
@@ -57,7 +57,7 @@
 
         <div class="flex items-center mb-8">
             <a class="mr-auto text-3xl font-bold leading-none" href="#">
-                <img src="imagens/favicon.png" alt="" class="h-12">
+                <img src="imagens/logotokiazul.png" alt="" class="h-12">
             </a>
             <button class="navbar-close">
                 <svg class="h-6 w-6 text-gray-400 cursor-pointer hover:text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -97,13 +97,13 @@
 </div>
 
 <section >
-  <h1 class="text-indigo-700 text-center">ALFABETO</h1>
+  <h1 class="text-indigo-700 text-4xl text-center font-bold">ALFABETO</h1>
 
   <div class="container m-auto px-2 pt-12 text-gray-800 md:px-28 xl:px-0">
     <div class="m-auto grid md:grid-cols-2">
 
       <div class="mb-10">
-        <p class="text-lg text-center font-bold">Classic Table Design</p>
+        <p class="text-lg text-center font-bold">Consoantes</p>
         <table class="rounded-t-lg mx-auto bg-gray-200 text-gray-800">
           <thead>
             <tr class="text-left border-b-2 border-gray-300">
@@ -170,7 +170,7 @@
       <div class="hidden md:none bg-indigo-700"></div>
 
       <div class="mb-10">
-        <p class="text-lg text-center font-bold">Classic Table Design</p>
+        <p class="text-lg text-center font-bold">Vogais</p>
         <table class="rounded-t-lg mx-auto bg-gray-200 text-gray-800">
           <thead>
             <tr class="text-left border-b-2 border-gray-300">
