--- a/login.html
+++ b/login.html
@@ -19,7 +19,7 @@
 <nav class="relative px-4 py-4 flex justify-between items-center">
 
     <a class="text-3xl font-bold leading-none" href="#"> <!--PARTE DO LOGO-->
-        <img src="imagens/logo.png" alt="" class="h-12">
+        <img src="imagens/logotokiazul.png" alt="" class="h-12">
     </a>
   
     <!--DARK LIGHT TOGGLE-->
@@ -57,7 +57,7 @@
 
         <div class="flex items-center mb-8">
             <a class="mr-auto text-3xl font-bold leading-none" href="#">
-                <img src="imagens/logo.png" alt="" class="h-12">
+                <img src="imagens/logotokiazul.png" alt="" class="h-12">
             </a>
             <button class="navbar-close">
                 <svg class="h-6 w-6 text-gray-400 cursor-pointer hover:text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
