--- a/basico.html
+++ b/basico.html
@@ -34,7 +34,7 @@
     </div>
 
     <a class="text-3xl font-bold leading-none" href="#"> <!--PARTE DO LOGO-->
-        <img src="imagens/logo.png" alt="" class="h-12">
+        <img src="imagens/logotokiazul.png" alt="" class="h-12">
     </a>
 
     <ul class="hidden absolute top-1/2 right-0 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
@@ -60,7 +60,7 @@
 
         <div class="flex items-center mb-8">
             <a class="mr-auto text-3xl font-bold leading-none" href="#">
-                <img src="imagens/logo.png" alt="" class="h-12">
+                <img src="imagens/logotokiazul.png" alt="" class="h-12">
             </a>
             <button class="navbar-close">
                 <svg class="h-6 w-6 text-gray-400 cursor-pointer hover:text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
