--- a/teste.html
+++ b/teste.html
@@ -19,7 +19,7 @@
 <nav class="relative px-4 py-4 flex justify-between items-center">
 
     <a class="text-3xl font-bold leading-none" href="#"> <!--PARTE DO LOGO-->
-        <img src="imagens/logo.png" alt="" class="h-14">
+        <img src="imagens/logotokiazul.png" alt="" class="h-14">
     </a>
   
     <!--DARK LIGHT TOGGLE-->
@@ -35,13 +35,13 @@
     </div>
 
     <ul class="hidden absolute top-1/2 right-0 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
-        <li><a class="text-12 text-indigo-700 font-bold" href="#">Home</a></li>
+        <li><a class="text-12 text-indigo-700 font-bold" href="index.html">Home</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Alfabeto</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="alfabeto.html">Alfabeto</a></li>
 
         <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="basico.html">Niveis</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Contato</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#footer">Contato</a></li>
 
         <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="login.html">Login</a></li>
     </ul>
@@ -57,7 +57,7 @@
 
         <div class="flex items-center mb-8">
             <a class="mr-auto text-3xl font-bold leading-none" href="#">
-                <img src="imagens/favicon.png" alt="" class="h-12">
+                <img src="imagens/logotokiazul.png" alt="" class="h-12">
             </a>
             <button class="navbar-close">
                 <svg class="h-6 w-6 text-gray-400 cursor-pointer hover:text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
@@ -69,16 +69,16 @@
         <div> <!--parte das opcoes-->
             <ul>
                 <li class="mb-1">
-                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Home</a>
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="index.html">Home</a>
                 </li>
                 <li class="mb-1">
-                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Alfabeto</a>
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="alfabeto.html">Alfabeto</a>
                 </li>
                 <li class="mb-1">
                     <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="basico.html">Niveis</a>
                 </li>
                 <li class="mb-1">
-                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Contato</a>
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#footer">Contato</a>
                 </li>
             </ul>
         </div>
@@ -96,6 +96,129 @@
     </nav>
 </div>
 
+<!-- component -->
+<!-- 
+    Tailwind Play Link:
+    https://play.tailwindcss.com/Iq18cgjApI 
+-->
+
+
+<!-- component -->
+<div class="py-16">  
+    <div class="container m-auto px-6 text-gray-500 md:px-12 xl:px-0">
+        <div class="mx-auto lg:w-full ">
+
+
+            <h1 class="text-indigo-700 text-4xl text-center font-bold">TESTE</h1>
+            <div class="bg-white rounded-2xl shadow-xl px-8 py-12 sm:px-12 lg:px-8">
+                <div class="mb-12 space-y-4">
+                    <h3 class="text-2xl font-semibold text-indigo-700">UI Design</h3>
+                    <p class="mb-6">Obcaecati, quam? Eligendi, nulla numquam natus laborum porro at cum, consectetur ullam tempora ipsa iste officia sed officiis! Incidunt ea animi officiis.</p>
+                    <a href="#" class="block font-medium text-indigo-700">Know more</a>
+                </div>
+                <img src="https://tailus.io/sources/blocks/end-image/preview/images/ui-design.svg" class="w-2/3 ml-auto" alt="illustration" loading="lazy" width="900" height="600">
+            </div>
+
+
+
+        </div>
+    </div>
+</div>
+
+
+
+<svg id="visual" viewBox="0 0 3000 200" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" class="left-0" style="margin-bottom: -3px;" >
+    <path d="M0 76L31.3 71.2C62.7 66.3 125.3 56.7 187.8 51.5C250.3 
+    46.3 312.7 45.7 375.2 52C437.7 58.3 500.3 71.7 562.8 79.5C625.3 87.3 687.7 89.7 750.2 89.3C812.7 89 875.3 86 937.8 81C1000.3 76 1062.7 69 1125.2 59.7C1187.7 50.3 1250.3 38.7 1312.8 35C1375.3 31.3 
+    1437.7 35.7 1500.2 35.5C1562.7 35.3 1625.3 30.7 1687.8 39.7C1750.3 48.7 1812.7 71.3 1875.2 80C1937.7 88.7 2000.3 83.3 2062.8 76.2C2125.3 69 2187.7 60 2250.2 53.7C2312.7 47.3 2375.3 43.7 2437.8 50.2C2500.3 
+    56.7 2562.7 73.3 2625.2 79.3C2687.7 85.3 2750.3 80.7 2812.8 72.5C2875.3 64.3 2937.7 52.7 2968.8 46.8L3000 41L3000 201L2968.8 201C2937.7 201 2875.3 201 2812.8 201C2750.3 201 2687.7 201 2625.2 
+    201C2562.7 201 2500.3 201 2437.8 201C2375.3 201 2312.7 201 2250.2 201C2187.7 201 2125.3 201 2062.8 201C2000.3 201 1937.7 201 1875.2 201C1812.7 201 1750.3 201 1687.8 201C1625.3 201 1562.7 201 1500.2 201C1437.7 
+    201 1375.3 201 1312.8 201C1250.3 201 1187.7 201 1125.2 201C1062.7 201 1000.3 201 937.8 201C875.3 201 812.7 201 750.2 201C687.7 201 625.3 201 562.8 201C500.3 201 437.7 201 375.2 201C312.7 201 250.3 201 
+    187.8 201C125.3 201 62.7 201 31.3 201L0 201Z" fill="#706ccc"></path><path d="M0 127L31.3 127.8C62.7 128.7 125.3 130.3 187.8 122.2C250.3 114 312.7 96 375.2 86.2C437.7 76.3 500.3 74.7 562.8 84C625.3 93.3 687.7 
+    113.7 750.2 115.8C812.7 118 875.3 102 937.8 97.8C1000.3 93.7 1062.7 101.3 1125.2 107.7C1187.7 114 1250.3 119 1312.8 117.2C1375.3 115.3 1437.7 106.7 1500.2 97.8C1562.7 89 1625.3 80 1687.8 79.8C1750.3 79.7 1812.7 
+    88.3 1875.2 94.8C1937.7 101.3 2000.3 105.7 2062.8 111.5C2125.3 117.3 2187.7 124.7 2250.2 119.8C2312.7 115 2375.3 98 2437.8 91.5C2500.3 85 2562.7 89 2625.2 87.7C2687.7 86.3 2750.3 79.7 2812.8 77.7C2875.3 75.7 2937.7 78.3 
+    2968.8 79.7L3000 81L3000 201L2968.8 201C2937.7 201 2875.3 201 2812.8 201C2750.3 201 2687.7 201 2625.2 201C2562.7 201 2500.3 201 2437.8 201C2375.3 201 2312.7 201 2250.2 201C2187.7 201 2125.3 201 2062.8 201C2000.3 201 1937.7 201
+    1875.2 201C1812.7 201 1750.3 201 1687.8 201C1625.3 201 1562.7 201 1500.2 201C1437.7 201 1375.3 201 1312.8 201C1250.3 201 1187.7 201 1125.2 201C1062.7 201 1000.3 201 937.8 201C875.3 201 812.7 201 750.2 201C687.7 
+    201 625.3 201 562.8 201C500.3 201 437.7 201 375.2 201C312.7 201 250.3 201 187.8 201C125.3 201 62.7 201 31.3 201L0 201Z" fill="#3636b3"></path><path d="M0 136L31.3 142.5C62.7 149 125.3 162 187.8 169C250.3 176 312.7 
+    177 375.2 168C437.7 159 500.3 140 562.8 131.5C625.3 123 687.7 125 750.2 134.3C812.7 143.7 875.3 160.3 937.8 159C1000.3 157.7 1062.7 138.3 1125.2 136.2C1187.7 134 1250.3 149 1312.8 156.7C1375.3 164.3 1437.7 164.7 
+    1500.2 161.5C1562.7 158.3 1625.3 151.7 1687.8 153.7C1750.3 155.7 1812.7 166.3 1875.2 162.7C1937.7 159 2000.3 141 2062.8 131.3C2125.3 121.7 2187.7 120.3 2250.2 128.2C2312.7 136 2375.3 153 2437.8 156.7C2500.3 160.3 2562.7 
+    150.7 2625.2 146.2C2687.7 141.7 2750.3 142.3 2812.8 140.3C2875.3 138.3 2937.7 133.7 2968.8 131.3L3000 129L3000 201L2968.8 201C2937.7 201 2875.3 201 2812.8 201C2750.3 201 2687.7 201 2625.2 201C2562.7 201 2500.3 201 2437.8 201C2375.3 
+    201 2312.7 201 2250.2 201C2187.7 201 2125.3 201 2062.8 201C2000.3 201 1937.7 201 1875.2 201C1812.7 201 1750.3 201 1687.8 201C1625.3 201 1562.7 201 1500.2 201C1437.7 201 1375.3 201 1312.8 201C1250.3 201 1187.7 201 1125.2 201C1062.7 
+    201 1000.3 201 937.8 201C875.3 201 812.7 201 750.2 201C687.7 201 625.3 201 562.8 201C500.3 201 437.7 201 375.2 201C312.7 201 250.3 201 187.8 201C125.3 201 62.7 201 31.3 201L0 201Z" fill="#232a84"></path></svg>
+        <!-- footer mesmo -->
+        <footer id="footer" class="relative bg-232a84 pt-14 pb-20">
+            <div class="container mx-auto px-4">
+                <div class="flex flex-wrap text-left lg:text-left">
+                <div class="w-full lg:w-6/12 px-4">
+
+                    <h4 class="text-3xl fonat-semibold text-white">Let's keep in touch!</h4>
+                    <h5 class="text-lg mt-0 mb-2 text-white">
+                    Find us on any of these platforms, we respond 1-2 business days.
+                    </h5>
+
+                    <div class="mt-6 lg:mb-0 mb-6">
+                    <button class="bg-white hover:bg-gray-200 text-lightBlue-400 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2" type="button">
+                        <i class="fab fa-twitter"></i></button>
+                    <button class="bg-white hover:bg-gray-200 text-lightBlue-600 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2" type="button">
+                        <i class="fab fa-facebook-square"></i></button>
+                    <button class="bg-white hover:bg-gray-200 text-pink-400 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2" type="button">
+                        <i class="fab fa-dribbble"></i></button>
+                    <button class="bg-white hover:bg-gray-200 text-blueGray-800 shadow-lg font-normal h-10 w-10 items-center justify-center align-center rounded-full outline-none focus:outline-none mr-2" type="button">
+                        <i class="fab fa-github"></i>
+                    </button>
+                    </div>
+
+                </div>
+                <div class="w-full lg:w-6/12 px-4">
+                    <div class="flex flex-wrap items-top mb-6">
+                    <div class="w-full lg:w-4/12 px-4 ml-auto">
+                        <span class="block uppercase text-white text-sm font-semibold mb-2">Useful Links</span>
+                        <ul class="list-unstyled">
+                        <li>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://www.creative-tim.com/presentation?ref=njs-profile">About Us</a>
+                        </li>
+                        <li>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://blog.creative-tim.com?ref=njs-profile">Blog</a>
+                        </li>
+                        <li>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://www.github.com/creativetimofficial?ref=njs-profile">Github</a>
+                        </li>
+                        <li>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://www.creative-tim.com/bootstrap-themes/free?ref=njs-profile">Free Products</a>
+                        </li>
+                        </ul>
+                    </div>
+                    <div class="w-full lg:w-4/12 px-4">
+                        <span class="block uppercase text-white text-sm font-semibold mb-2">Other Resources</span>
+                        <ul class="list-unstyled">
+                        <li>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://github.com/creativetimofficial/notus-js/blob/main/LICENSE.md?ref=njs-profile">MIT License</a>
+                        </li>
+                        <li>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://creative-tim.com/terms?ref=njs-profile">Terms &amp; Conditions</a>
+                        </li>
+                        <li>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://creative-tim.com/privacy?ref=njs-profile">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a class="text-blueGray-400 hover:text-blueGray-700 font-semibold block pb-2 text-sm" href="https://creative-tim.com/contact-us?ref=njs-profile">Contact Us</a>
+                        </li>
+                        </ul>
+                    </div>
+                    </div>
+                </div>
+                </div>
+                <hr class="my-6 border-blueGray-300">
+                <div class="flex flex-wrap items-center md:justify-between justify-center">
+                <div class="w-full md:w-4/12 px-4 mx-auto text-center">
+                    <div class="text-sm text-blueGray-500 font-semibold py-1">
+                    Copyright © <span id="get-current-year">2023</span><a href="https://www.creative-tim.com/product/notus-js" class="text-blueGray-500 hover:text-gray-800" target="_blank"> 
+                    <a href="https://www.creative-tim.com?ref=njs-profile" class="text-blueGray-500 hover:text-blueGray-800"></a>
+                    </div>
+                </div>
+                </div>
+            </div>
+        </footer>
 
     </body>
 </html>
