--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
         <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
-        <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
-        <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-16x16.png">
-        <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-32x32.png">
-        <link rel="manifest" href="favicons/site.webmanifest">
+        <link rel="apple-touch-icon" sizes="180x180" href="faviconis/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="faviconis/favicon-16x16.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="faviconis/favicon-32x32.png">
+        <link rel="manifest" href="faviconis/site.webmanifest">
         <link rel="stylesheet" href="https://rsms.me/inter/inter.css">       
         <script defer src="js/main.js"></script>
         <link rel="stylesheet" href="css/style.css">
