navs ind update

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="basico.html">Niveis</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#footer">Contato</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="contato.html">Contato</a></li>
 
         <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="login.html">Login</a></li>
     </ul>
@@ -81,7 +81,7 @@
                     <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="basico.html">Niveis</a>
                 </li>
                 <li class="mb-1">
-                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#footer">Contato</a>
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="contato.html">Contato</a>
                 </li>
             </ul>
         </div>
