--- a/alfabeto.html
+++ b/alfabeto.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>   
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
-    <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">       
-    <script defer src="js/main.js"></script>
-    <link rel="stylesheet" href="css/style.css">
-    <title>Tokilingo</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <script src="https://cdn.tailwindcss.com"></script>
+        <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
+        <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
+        <link rel="apple-touch-icon" sizes="180x180" href="faviconis/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="faviconis/favicon-16x16.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="faviconis/favicon-32x32.png">
+        <link rel="manifest" href="faviconis/site.webmanifest">
+        <link rel="stylesheet" href="https://rsms.me/inter/inter.css">       
+        <script defer src="js/main.js"></script>
+        <link rel="stylesheet" href="css/style.css">
+        <title>Tokilingo</title>
 </head>
       <body>
  
@@ -37,15 +40,17 @@
     <ul class="hidden absolute top-1/2 right-0 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
         <li><a class="text-12 text-indigo-700 font-bold" href="index.html">Home</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Alfabeto</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="alfabeto.html">Alfabeto</a></li>
 
         <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="basico.html">Niveis</a></li>
 
-        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#footer">Contato</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="contato.html">Contato</a></li>
+
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="cadastro.html">Cadastro</a></li>
 
         <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="login.html">Login</a></li>
     </ul>
-    <a class=" lg:inline-block py-2 px-6 bg-indigo-700 hover:bg-indigo-900 text-sm text-white font-bold rounded-xl transition duration-200" href="teste.html">Faça o teste</a>
+    <a class=" lg:inline-block py-3 px-6 mr-1 bg-indigo-700 hover:bg-indigo-900 text-md text-white font-bold rounded-xl transition duration-200" href="teste.html">Faça o teste</a>
 </nav>
 
 <!--PARTE PROS CELULARES-->
@@ -69,16 +74,16 @@
         <div> <!--parte das opcoes-->
             <ul>
                 <li class="mb-1">
-                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Home</a>
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="index.html">Home</a>
                 </li>
                 <li class="mb-1">
-                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Alfabeto</a>
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="alfabeto.html">Alfabeto</a>
                 </li>
                 <li class="mb-1">
                     <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="basico.html">Niveis</a>
                 </li>
                 <li class="mb-1">
-                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Contato</a>
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="contato.html">Contato</a>
                 </li>
             </ul>
         </div>
@@ -86,7 +91,7 @@
         <div class="mt-auto"> <!--Parte do signup e copyright-->
             <div class="pt-6">
                 <a class="block px-4 py-3 mb-3 leading-loose text-xs text-center font-semibold leading-none bg-gray-50 hover:bg-gray-100 rounded-xl" href="login.html">Login</a>
-                <a class="block px-4 py-3 mb-2 leading-loose text-xs text-center text-white font-semibold bg-indigo-700 hover:bg-indigo-900  rounded-xl" href="#">Cadastre-se</a>
+                <a class="block px-4 py-3 mb-2 leading-loose text-xs text-center text-white font-semibold bg-indigo-700 hover:bg-indigo-900  rounded-xl" href="cadastro.html">Cadastre-se</a>
             </div>
             <p class="my-4 text-xs text-center text-gray-400">
                 <span>Copyright © 2023</span>
