--- a/intermediario.html
+++ b/intermediario.html
@@ -3,23 +3,27 @@
 <head>   
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="shortcut icon" href="imagens/favicon.png" type="image/x-icon">
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/styles/tailwind.css">
         <link rel="stylesheet" href="https://demos.creative-tim.com/notus-js/assets/vendor/@fortawesome/fontawesome-free/css/all.min.css">
-        <link rel="stylesheet" href="https://rsms.me/inter/inter.css">  
-        <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">     
+        <link rel="apple-touch-icon" sizes="180x180" href="faviconis/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="faviconis/favicon-16x16.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="faviconis/favicon-32x32.png">
+        <link rel="manifest" href="faviconis/site.webmanifest">
+        <link rel="stylesheet" href="https://rsms.me/inter/inter.css">       
         <script defer src="js/main.js"></script>
         <link rel="stylesheet" href="css/style.css">
         <title>Tokilingo</title>
 </head>
-<body>
-        
+      <body>
+ 
         <!--NAVBAR-->
 
 <nav class="relative px-4 py-4 flex justify-between items-center">
 
-
+    <a class="text-3xl font-bold leading-none" href="#"> <!--PARTE DO LOGO-->
+        <img src="imagens/logotokiazul.png" alt="" class="h-14">
+    </a>
   
     <!--DARK LIGHT TOGGLE-->
 
@@ -28,27 +32,25 @@
         <button class="navbar-burger flex items-center text-blue-600 p-3">
             <svg class="block h-4 w-4 fill-current" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
                 <title>Mobile menu</title>
-                <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path>
+                <path d="M0 3h20v2H0V3zm0 6h20v2H0V9zm0 6h20v2H0v-2z"></path> <!--barrinhas pra funcionar no celular-->
             </svg>
         </button>
     </div>
 
-    <a class="text-3xl font-bold leading-none" href="#"> <!--PARTE DO LOGO-->
-        <img src="imagens/logotokiazul.png" alt="" class="h-12">
-    </a>
-
     <ul class="hidden absolute top-1/2 right-0 transform -translate-y-1/2 -translate-x-1/2 lg:flex lg:mx-auto lg:flex lg:items-center lg:w-auto lg:space-x-6">
-      <li><a class="text-12 text-indigo-700 font-bold" href="index.html">Home</a></li>
+        <li><a class="text-12 text-indigo-700 font-bold" href="index.html">Home</a></li>
 
-      <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="alfabeto.html">Alfabeto</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="alfabeto.html">Alfabeto</a></li>
 
-      <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Niveis</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="basico.html">Niveis</a></li>
 
-      <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="#">Contato</a></li>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="contato.html">Contato</a></li>
 
-      <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="login.html">Login</a></li>
-  </ul>
-  <a class=" lg:inline-block py-2 px-6 bg-indigo-700 hover:bg-indigo-900 text-sm text-white font-bold rounded-xl transition duration-200" href="teste.html">Faça o teste</a>
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="cadastro.html">Cadastro</a></li>
+
+        <li><a class="text-12 text-black font-semibold hover:text-gray-500" href="login.html">Login</a></li>
+    </ul>
+    <a class=" lg:inline-block py-3 px-6 mr-1 bg-indigo-700 hover:bg-indigo-900 text-md text-white font-bold rounded-xl transition duration-200" href="teste.html">Faça o teste</a>
 </nav>
 
 <!--PARTE PROS CELULARES-->
@@ -64,37 +66,37 @@
             </a>
             <button class="navbar-close">
                 <svg class="h-6 w-6 text-gray-400 cursor-pointer hover:text-gray-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path>
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12"></path> <!--o fechar pra funcionar no celular-->
                 </svg>
             </button>
         </div>
 
         <div> <!--parte das opcoes-->
-          <ul>
-              <li class="mb-1">
-                  <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="index.html">Home</a>
-              </li>
-              <li class="mb-1">
-                  <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="alfabeto.html">Alfabeto</a>
-              </li>
-              <li class="mb-1">
-                  <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Niveis</a>
-              </li>
-              <li class="mb-1">
-                  <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="#">Contato</a>
-              </li>
-          </ul>
-      </div>
+            <ul>
+                <li class="mb-1">
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="index.html">Home</a>
+                </li>
+                <li class="mb-1">
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="alfabeto.html">Alfabeto</a>
+                </li>
+                <li class="mb-1">
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="basico.html">Niveis</a>
+                </li>
+                <li class="mb-1">
+                    <a class="block p-4 text-sm font-semibold text-gray-400 hover:bg-blue-50 hover:text-blue-600 rounded" href="contato.html">Contato</a>
+                </li>
+            </ul>
+        </div>
 
-      <div class="mt-auto"> <!--Parte do signup e copyright-->
-          <div class="pt-6">
-              <a class="block px-4 py-3 mb-3 leading-loose text-xs text-center font-semibold leading-none bg-gray-50 hover:bg-gray-100 rounded-xl" href="login.html">Login</a>
-              <a class="block px-4 py-3 mb-2 leading-loose text-xs text-center text-white font-semibold bg-indigo-700 hover:bg-indigo-900  rounded-xl" href="#">Cadastre-se</a>
-          </div>
-          <p class="my-4 text-xs text-center text-gray-400">
-              <span>Copyright © 2023</span>
-          </p>
-      </div>
+        <div class="mt-auto"> <!--Parte do signup e copyright-->
+            <div class="pt-6">
+                <a class="block px-4 py-3 mb-3 leading-loose text-xs text-center font-semibold leading-none bg-gray-50 hover:bg-gray-100 rounded-xl" href="login.html">Login</a>
+                <a class="block px-4 py-3 mb-2 leading-loose text-xs text-center text-white font-semibold bg-indigo-700 hover:bg-indigo-900  rounded-xl" href="cadastro.html">Cadastre-se</a>
+            </div>
+            <p class="my-4 text-xs text-center text-gray-400">
+                <span>Copyright © 2023</span>
+            </p>
+        </div>
 
     </nav>
 </div>
